buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.1.0'
    }
}

apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'java-library'

dependencies {
    implementation('com.amazonaws:aws-lambda-java-core:1.2.0')
    implementation('com.amazonaws:aws-lambda-java-events:2.2.6')
    testImplementation 'junit:junit:4.12'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.60'
}

sourceCompatibility = "1.8"
targetCompatibility = "1.8"
